syntax = "proto3";

package consignment;

message Container {
    string id = 1;
    string customer_id = 2;
    string origin = 3;
    string user_id =4;
}

message Command {
    string id = 1;
    string description = 2;
    int32 weight = 3;
    repeated Container containers = 4;
    string vessel_id = 5;
}


message Response {
    bool created = 1;
    Command command = 2;
    repeated Command commands = 3;
}

message GetRequest {}

service ShippingService {
    rpc CreateCommand(Command) returns (Response) {}
    //Добавляю новый rpc метод
    rpc GetAllCommands(GetRequest) returns (Response) {}
}
